@@ -1,0 +1,6 @@
+	.text
+	.global _start
+_start:
+	.cfi_startproc
+	.skip 16
+	.cfi_endproc
