@@ -13,25 +13,25 @@ Disassembly of section .text:
 40+1000:	10 10 15 06 80 05[ 	]+\[MIB\][ 	]+alloc r34=ar.pfs,5,3,0
 40+1006:	10 02 00 62 00 00[ 	]+mov r33=b0
 40+100c:	00 00 00 20[ 	]+nop.b 0x0
-40+1010:	0d 70 80 02 00 24[ 	]+\[MFI\][ 	]+addl r14=32,r1
+40+1010:	0d 70 .0 0. 00 24[ 	]+\[MFI\][ 	]+addl r14=(24|32|40|48|56|64),r1
 40+1016:	00 00 00 02 00 e0[ 	]+nop.f 0x0
-40+101c:	81 0a 00 90[ 	]+addl r15=40,r1;;
+40+101c:	.1 0. 00 90[ 	]+addl r15=(24|32|40|48|56|64),r1;;
 40+1020:	19 18 01 1c 18 10[ 	]+\[MMB\][ 	]+ld8 r35=\[r14\]
 40+1026:	40 02 3c 30 20 00[ 	]+ld8 r36=\[r15\]
 40+102c:	[0-9a-f 	]+br.call.sptk.many b0=[0-9a-f]+ <.*>;;
-40+1030:	0d 70 c0 02 00 24[ 	]+\[MFI\][ 	]+addl r14=48,r1
+40+1030:	0d 70 .0 0. 00 24[ 	]+\[MFI\][ 	]+addl r14=(24|32|40|48|56|64),r1
 40+1036:	00 00 00 02 00 e0[ 	]+nop.f 0x0
-40+103c:	01 0c 00 90[ 	]+addl r15=64,r1;;
+40+103c:	.1 0. 00 90[ 	]+addl r15=(24|32|40|48|56|64),r1;;
 40+1040:	19 18 01 1c 18 10[ 	]+\[MMB\][ 	]+ld8 r35=\[r14\]
 40+1046:	40 02 3c 30 20 00[ 	]+ld8 r36=\[r15\]
 40+104c:	[0-9a-f 	]+br.call.sptk.many b0=[0-9a-f]+ <.*>;;
-40+1050:	0d 70 c0 02 00 24[ 	]+\[MFI\][ 	]+addl r14=48,r1
+40+1050:	0d 70 .0 0. 00 24[ 	]+\[MFI\][ 	]+addl r14=(24|32|40|48|56|64),r1
 40+1056:	00 00 00 02 00 80[ 	]+nop.f 0x0
 40+105c:	14 02 00 90[ 	]+mov r36=33;;
 40+1060:	1d 18 01 1c 18 10[ 	]+\[MFB\][ 	]+ld8 r35=\[r14\]
 40+1066:	00 00 00 02 00 00[ 	]+nop.f 0x0
 40+106c:	[0-9a-f 	]+br.call.sptk.many b0=[0-9a-f]+ <.*>;;
-40+1070:	0d 70 c0 02 00 24[ 	]+\[MFI\][ 	]+addl r14=48,r1
+40+1070:	0d 70 .0 0. 00 24[ 	]+\[MFI\][ 	]+addl r14=(24|32|40|48|56|64),r1
 40+1076:	00 00 00 02 00 80[ 	]+nop.f 0x0
 40+107c:	04 00 00 84[ 	]+mov r36=r0;;
 40+1080:	1d 18 01 1c 18 10[ 	]+\[MFB\][ 	]+ld8 r35=\[r14\]
@@ -51,11 +51,11 @@ Disassembly of section .text:
 40+10cc:	08 00 84 00[ 	]+br.ret.sptk.many b0;;
 
 40+10d0 <_start>:
-40+10d0:	0b 70 60 02 00 24[ 	]+\[MMI\][ 	]+addl r14=24,r1;;
+40+10d0:	0b 70 .0 0. 00 24[ 	]+\[MMI\][ 	]+addl r14=(24|32|40|48|56|64),r1;;
 40+10d6:	e0 00 38 30 20 00[ 	]+ld8 r14=\[r14\]
 40+10dc:	00 00 04 00[ 	]+nop.i 0x0;;
 40+10e0:	0b 70 38 1a 00 20[ 	]+\[MMI\][ 	]+add r14=r14,r13;;
-40+10e6:	e0 c0 05 00 48 00[ 	]+addl r14=56,r1
+40+10e6:	e0 .0 0. 00 48 00[ 	]+addl r14=(24|32|40|48|56|64),r1
 40+10ec:	00 00 04 00[ 	]+nop.i 0x0;;
 40+10f0:	0b 70 00 1c 18 10[ 	]+\[MMI\][ 	]+ld8 r14=\[r14\];;
 40+10f6:	e0 70 34 00 40 00[ 	]+add r14=r14,r13
