@@ -11,5 +11,5 @@ Contents of section .got:
  (60+)?1318 0+ 0+ 0+ 0+  .*
  (60+)?1328 0+ 0+ 0+ 0+  .*
  (60+)?1338 0+ 0+ 0+ 0+  .*
- (60+)?1348 01000000 0+ 90000000 0+  .*
- (60+)?1358 24000000 0+  .*
+ (60+)?1348 (00|01|24|90)000000 0+ (00|01|24|90)000000 0+  .*
+ (60+)?1358 (00|01|24|90)000000 0+  .*
