@@ -1,3 +1,8 @@
+2006-12-04  Jan Beulich  <jbeulich@novell.com>
+
+	* emultempl/elf32.em (gld${EMULATION_NAME}_after_open): Create
+	.eh_frame_hdr section here.
+
 2006-11-27  Ian Lance Taylor  <ian@airs.com>
 
 	* Makefile.am (EXTRA_DIST): Put spu_ovl.o in the emultempl
